--- a/Assets/Extensions/SaveSystem/Samples/SaveSystem.Samples.asmdef
+++ b/Assets/Extensions/SaveSystem/Samples/SaveSystem.Samples.asmdef
@@ -1,11 +1,7 @@
 {
-    "name": "BubbleIdle.Core",
-    "rootNamespace": "BubbleIdle.Core",
-    "references": [
-        "Unity.TextMeshPro",
-        "LTX.Singletons.Runtime",
-        "SaveSystem.Core"
-    ],
+    "name": "SaveSystem.Samples",
+    "rootNamespace": "SaveSystem.Samples",
+    "references": ["GUID:3e712867162a60e44a30faa129258f36"],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
